created route to add users

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/trivedhaudurthi/webapp#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "moment": "^2.29.0",
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "jest": "^26.4.2",
