--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/trivedhaudurthi/webapp#readme",
   "dependencies": {
+    "aws-sdk": "^2.773.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "moment": "^2.29.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.0"
