--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "log4js": "^6.3.0",
     "moment": "^2.29.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
+    "statsd-client": "^0.4.5",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
