--- a/cloudwatch-config.json
+++ b/cloudwatch-config.json
@@ -7,7 +7,7 @@
             "files": {
                 "collect_list": [
                     {
-                        "file_path": "home/ubuntu/webAppLogs/webapp.log",
+                        "file_path": "home/ubuntu/logs/webapp.log",
                         "log_group_name": "csye6225",
                         "log_stream_name": "webapp",
                         "timezone":"UTC"
