--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         appname: ['csye6225-webapp']
         deploy-group: ['dev']
-        s3-bucket: ['codedeploy.prod.trivedhaudurthi.me']
+        s3-bucket: ['codedeploy.${{ secrets.ACCOUNT }}.trivedhaudurthi.me']
         s3-key: ['webapp-$GITHUB_SHA']
         region: ['us-east-1']
     steps:
