--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: Deploy to EC2
 on:
   workflow_dispatch:
+  push:
     branches:
       - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
